# meta-hackathon-supply-chain

./: .gitignore  Dockerfile  README.md  app.py  debug.md  inference.py  openenv.yaml  pyproject.toml  submission.md  validate_submission.py
.cursor/rules/: venv.mdc
hackathon/: README.md  __init__.py  _compat.py  client.py  debug.md  models.py  pyproject.toml
hackathon/server/: __init__.py  app.py  hackathon_environment.py
hackathon/test/: supply_chain_tests.ipynb  test_multi_product.py  test_network_topology.py  test_news_events.py  test_run.py  test_stochastic_lt.py  test_sustainability.py  test_variable_costs.py
hackathon/train/: __init__.py  agent_ppo.py  agent_reinforce.py  agent_sac.py
models/: ppo_supply_chain.pt
server/: __init__.py  app.py
service/: README.md  __init__.py  client.py  debug.md  grading.py  hackathon_environment.py  models.py  openenv.yaml  pyproject.toml  tasks.py
service/server/: app.py  hackathon_environment.py
service/test/: supply_chain_tests.ipynb  test_inference_grader.py  test_multi_product.py  test_network_topology.py  test_news_events.py  test_run.py  test_stochastic_lt.py  test_sustainability.py  test_variable_costs.py
service/train/: __init__.py  agent_ppo.py  agent_reinforce.py  agent_sac.py  device.py
