# Repo root: dependency + OpenEnv manifest expectations (pyproject + uv.lock).
# Application code lives in `service/` and `server/`; this project is dependency-only.

[project]
name = "supply-chain-openenv"
version = "0.1.0"
description = "Multi-echelon supply chain environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
]

[project.scripts]
server = "server.app:main"

[tool.uv]
package = false
